Remove unamed module access messages